import Receipt from "./Receipt";

export default class BalanceReceipt extends Receipt {
}
