import Receipt from "./Receipt";

export default class WithdrawalReceipt extends Receipt {
}
