import Account from "./Account";

export default class CurrentAccount extends Account {
}
