import Account from "./Account";

export default class SavingAccount extends Account {
}
